# reinforcementLearning

./: N1.md  N1.py  N1_basic.ipynb  N2.md  N2.py  N2_hyperparameter_optimization.ipynb  N3.md  N3.py  N3_contextual.ipynb  bandits.py  main.py  pyproject.toml  utils.py
.ipynb_checkpoints/: N3_contextual-checkpoint.ipynb  bandits-checkpoint.py
environments/: base.py  normal.py  recsys.py
tests/: test_bandits_egreedy.py  test_bandits_gb.py  test_bandits_ucb.py  test_contextual.py  test_normal_environment.py  test_recsys_environment.py
