[project]
name = "a1-mab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==1.0",
    "ipykernel>=7.1.0",
    "ipynb>=0.5.1",
    "jupyterlab==4.4",
    "matplotlib==3.9",
    "numpy==1.26",
    "pytest==8.4.2",
    "scikit-learn==1.7.2",
    "scipy==1.12",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
